--- a/front-end/src/assets/styles/tailwind.css
+++ b/front-end/src/assets/styles/tailwind.css
@@ -1149,6 +1149,16 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(153, 246, 228, var(--tw-bg-opacity));
 }
+.bg-green-500	{
+  --tw-bg-opacity: 1;
+  background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
+}
+.bg-green-700{
+  --tw-bg-opacity: 1;
+  background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
+
+}
+
 
 .bg-teal-500 {
   --tw-bg-opacity: 1;
@@ -1284,7 +1294,8 @@ select {
   --tw-border-opacity: 1;
   border-color: rgba(3, 105, 161, var(--tw-border-opacity));
 }
-
+.bg-indigo-800	{--tw-bg-opacity: 1;
+background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 .border-blueGray-50 {
   --tw-border-opacity: 1;
   border-color: rgba(248, 250, 252, var(--tw-border-opacity));
@@ -1985,6 +1996,43 @@ select {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+.px-6	{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.px-7	{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+.px-8	{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.px-9	{
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+.px-48	{padding-left: 12rem;
+padding-right: 12rem;}
+.px-52	{padding-left: 13rem;
+padding-right: 13rem;}
+.px-56	{padding-left: 14rem;
+padding-right: 14rem;}
+.px-60	{padding-left: 15rem;
+padding-right: 15rem;}
+.px-64	{padding-left: 16rem;
+padding-right: 16rem;}
+.px-72	{padding-left: 18rem;
+padding-right: 18rem;}
+.px-80	{padding-left: 20rem;
+padding-right: 20rem;}
+.px-96	{padding-left: 24rem;
+padding-right: 24rem;}
 
 .py-4 {
   padding-top: 1rem;
@@ -2112,6 +2160,8 @@ select {
 .pt-20 {
   padding-top: 5rem;
 }
+.pl-48	{
+  padding-left: 12rem;}
 
 .pb-20 {
   padding-bottom: 5rem;
@@ -2239,7 +2289,7 @@ select {
 .top-25-px {
   top: 25px;
 }
-
+.rounded-lg{	border-radius: 0.5rem;}
 .left-40-px {
   left: 40px;
 }
@@ -2515,6 +2565,13 @@ select {
 .w-1\/2 {
   width: 50%;
 }
+.w-1\/4 {
+  width: 25%;
+}
+.w-1\/3 {
+  width: 30%;
+}
+
 
 .w-6\/12 {
   width: 50%;
