--- a/front-end/src/assets/styles/tailwind.css
+++ b/front-end/src/assets/styles/tailwind.css
@@ -1089,6 +1089,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
+.bg-pulse-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(5, 120, 133, var(--tw-bg-opacity));
+}
 
 .bg-pink-500 {
   --tw-bg-opacity: 1;
@@ -1149,6 +1153,12 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(153, 246, 228, var(--tw-bg-opacity));
 }
+.bg-green-200{	--tw-bg-opacity: 1;
+background-color: rgba(167, 243, 208, var(--tw-bg-opacity));}	
+.bg-green-300	{--tw-bg-opacity: 1;
+background-color: rgba(110, 231, 183, var(--tw-bg-opacity));}	
+.bg-green-400{	--tw-bg-opacity: 1;
+background-color: rgba(52, 211, 153, var(--tw-bg-opacity));}
 .bg-green-500	{
   --tw-bg-opacity: 1;
   background-color: rgba(16, 185, 129, var(--tw-bg-opacity));
@@ -1567,6 +1577,7 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
   height: 600px;
 }
 
+
 .text-55 {
   font-size: 55rem;
 }
@@ -1676,6 +1687,36 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
   margin-left: auto;
   margin-right: auto;
 }
+.mx-1\/20{
+  margin-left: 5%;
+  margin-right: 5%;
+  
+}
+.mx-1\/10{
+  margin-left: 10%;
+  margin-right: 10%;
+  
+}
+.mr-1\/5{
+
+  margin-right: 20%;
+  
+}
+.mr-2\/5{
+
+  margin-right: 40%;
+  
+}
+.mx-2\/5{
+  margin-left: 40%;
+  margin-right: 40%;
+  
+}
+.mx-3\/5{
+  margin-left: 60%;
+  margin-right: 60%;
+  
+}
 
 .mt-0 {
   margin-top: 0px;
@@ -1701,8 +1742,14 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
   margin-bottom: 0.25rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.ml-1\/20 {
+  margin-left: 5%;
+}
+.ml-1\/40{
+  margin-left: 2.25%;
 }
 .mt-1\/2 {
   margin-top: 5%;
@@ -1726,6 +1773,9 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 
 .mr-2 {
   margin-right: 0.5rem;
+}
+.mr-1\/5 {
+  margin-right:20% ;
 }
 
 .mb-2 {
@@ -1919,6 +1969,7 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 .min-w-48 {
   min-width: 12rem;
 }
+.min-w-full{	min-width: 30%;}
 
 .min-w-140-px {
   min-width: 140px;
@@ -1985,6 +2036,21 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
+}
+.px-1\/5{
+  padding-left: 20%;
+  padding-right: 20%;
+  
+}
+.px-2\/5{
+  padding-left: 40%;
+  padding-right: 40%;
+  
+}
+.px-3\/5{
+  padding-left: 60%;
+  padding-right: 60%;
+  
 }
 
 .py-1 {
@@ -2421,6 +2487,10 @@ padding-right: 24rem;}
   --tw-text-opacity: 1;
   color: rgba(244, 114, 182, var(--tw-text-opacity));
 }
+.text-pulse-500 {
+  --tw-text-opacity: 1;
+  color: rgba(5, 120, 133, var(--tw-text-opacity));
+}
 
 .text-lightBlue-300 {
   --tw-text-opacity: 1;
@@ -2579,6 +2649,15 @@ padding-right: 24rem;}
 .w-auto {
   width: auto;
 }
+.w-3\/5 {
+  width: 22.5%;
+}
+.w-1\/5 {
+  width: 20%;
+}
+.w-1\/4 {
+  width: 25%;
+}
 
 .w-1\/2 {
   width: 50%;
@@ -2589,11 +2668,13 @@ padding-right: 24rem;}
 .w-1\/3 {
   width: 30%;
 }
-
-
-.w-6\/12 {
-  width: 50%;
+.w-9\/12 {
+  width: 60%;
 }
+.w-11\/12 {
+  width: 80%;
+}
+
 
 .w-10\/12 {
   width: 83.333333%;
