--- a/front-end/src/assets/styles/tailwind.css
+++ b/front-end/src/assets/styles/tailwind.css
@@ -102,6 +102,7 @@ Add the correct font weight in Edge and Safari.
 b,
 strong {
   font-weight: bolder;
+
 }
 
 /**
@@ -1119,6 +1120,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgba(99, 102, 241, var(--tw-bg-opacity));
 }
+.bg-indigo-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(49, 46, 129, var(--tw-bg-opacity));
+}
 
 .bg-lightBlue-200 {
   --tw-bg-opacity: 1;
@@ -1174,6 +1179,7 @@ background-color: rgba(52, 211, 153, var(--tw-bg-opacity));}
   background-color: rgba(4, 120, 87, var(--tw-bg-opacity));
 
 }
+.bg-gray-400	{background-color: rgb(156 163 175)};
 .bg-gray-200	{--tw-bg-opacity: 1;
 background-color: rgba(229, 231, 235, var(--tw-bg-opacity));}
 .bg-gray-100	{--tw-bg-opacity: 1;
@@ -2061,6 +2067,11 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
+}
+.px-1\/100{
+  padding-left: 1%;
+  padding-right: 1%;
+  
 }
 .px-1\/5{
   padding-left: 20%;
