--- a/front-end/src/assets/styles/tailwind.css
+++ b/front-end/src/assets/styles/tailwind.css
@@ -2014,6 +2014,12 @@ background-color: rgba(55, 48, 163, var(--tw-bg-opacity));}
 .max-w-210-px {
   max-width: 210px;
 }
+.max-w-300-px {
+  max-width: 300px;
+}
+.max-w-400-px {
+  max-width: 400px;
+}
 
 .max-w-580-px {
   max-width: 580px;
@@ -2745,6 +2751,9 @@ padding-right: 24rem;}
 }
 .h-1\/4 {
   height: 25%;
+}
+.h-1\/25 {
+  height: 40%;
 }
 .w-1\/3 {
   width: 40%;
