[FIX]amelioration page membvers

--- a/front-end/src/assets/styles/style.css
+++ b/front-end/src/assets/styles/style.css
@@ -2,3 +2,13 @@
     margin-top: 60px;
     margin-bottom: 30px;
 }
+.card-profil:hover {
+    color: white;
+}
+.nom-card-profil{
+    height: 80px;
+}
+
+.fonction-card-profil{
+    height: 80px;
+}
