--- a/front-end/src/assets/styles/style.css
+++ b/front-end/src/assets/styles/style.css
@@ -21,7 +21,7 @@
     height: 60px;
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 750px) {
     .developpeur{
         margin: 0px 0px;
         padding-left: 0px;
@@ -31,4 +31,21 @@
     .card-top{
         width: 100%;
     }
+    .card-member{
+        width: 100%;
+        margin-top: 100px;
+    }
+    .fonction-card-profil{
+    height: 100px;
+}
+}
+
+@media screen and (min-width: 751px) and (max-width: 1023px) {
+    .card-member{
+        width: 40%;
+        margin: 50px 30px;
+    }
+    .fonction-card-profil{
+    height: 100px;
+}
 }
